Created function for generating tropospheric noise

--- a/InSARNoise.ipynb
+++ b/InSARNoise.ipynb
@@ -144,8 +144,56 @@
    "id": "bef95d26-73f2-417b-995b-edd9872b1ef5",
    "metadata": {},
    "source": [
-    "The second type of noise we want to add is tropospheric noise. This noise is slightly different than our Gaussian noise as it's not \"White Noise.\" That is to say, each pixel is not independent in picking from the distribution. Rather, the frequency across the x and y axes determines the noise level at a specific pixel. Due to the \"Power Law\" $P(k) "
+    "The second type of noise we want to add is tropospheric noise. \n",
+    "\n",
+    "This noise is slightly different than our Gaussian noise as it's not \"White Noise.\" That is to say, each pixel is not independent in picking from the distribution. \n",
+    "\n",
+    "Rather, the frequency across the x and y axes determines the noise level at a specific pixel. In our case, the distirbution follows the \"Power Law\" $P(k) \\propto k^{-\\beta}$, where $k$ is the spatial frequency, and $\\beta$ is a constant controlling how quickly power decays with frequency. From the given paper we will use $\\beta = 1.82$.\n",
+    "\n",
+    "However, because we are dealing discrete pixels (not a continuous distribution) we need to use np.fft.fftfreq() to generate a discrete frequency array for our pixels. We need to do this for both the x and y axis. After this we can calculate the radial frequency (circular frequency from the center) by calculating the magnitude as $k = \\sqrt{k_{x}^{2} + k_{y}^{2}}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d707161-2fc4-472d-837f-ac6fe9e21a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_tropospheric_noise(size, beta=1.82, scale=1.0):\n",
+    "    # Create a frequency domain based on a standard normal distribution\n",
+    "    noise = np.fft.fft2(np.nradon.randn(*size)) \n",
+    "\n",
+    "    # Create our discrte frequency distributions over x and y axes\n",
+    "    ky = np.fft.fftfreq(size[0])\n",
+    "    kx = np.fft.fftfreq(size[1])\n",
+    "\n",
+    "    # Mesh them together get the specific axes\n",
+    "    kx, ky = np.meshgrid(kx, ky)\n",
+    "\n",
+    "    # Compute the radial spatial frequency (frequency from the center)\n",
+    "    k = np.sqrt(kx**2 + ky**2)\n",
+    "    k[0, 0] = 1e-7\n",
+    "\n",
+    "    # Calculate the power law\n",
+    "    power = k ** (-beta)\n",
+    "\n",
+    "    # Use inverse gourier transform to calculate it back in spatial domain\n",
+    "    frac_noise = np.fft.ifft2(noise * power).real\n",
+    "\n",
+    "    # Normalize it\n",
+    "    frac_noise = (frac_noise - frac_noise.mean()) / frac_noise.std()\n",
+    "    return frac\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "640f5498-d474-4619-9a03-59e3af6d814a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
