Started time-series portion

--- a/InSARNoise.ipynb
+++ b/InSARNoise.ipynb
@@ -342,6 +342,34 @@
     "test_img = generate_vertical_displacement(size) + generate_tropospheric_noise(size) + generate_random_noise(size)\n",
     "plt.imshow(test_img)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3585fefa-ef90-42ad-9cfa-206626f69b97",
+   "metadata": {},
+   "source": [
+    "# 4. Generating Synthetic Time-Series Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a8e5c9f-1f46-4b12-970f-6b91dd912d53",
+   "metadata": {},
+   "source": [
+    "To properly simulate really satellite data, we need to change the displacement values over some interval of days. In the paper this was tested against both a linear and logarithmic change in discplacement over intervals of 49 days each. Because the tropospheric and random noise are implemented randomly we can just call those functions. However, we need to iterate over our time series for both log and linear discplacements to create our synthetic time-series data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b0f3638-e7b1-4234-abba-59a9f67ccb62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_times(total_days=1460, interval_days=49):\n",
+    "    # Return an array of days of step size interval_days\n",
+    "    return np.arange(0, total_days + 1, interval_days)"
+   ]
   }
  ],
  "metadata": {
