Added metrics code

--- a/InSARNoiseLogarithmic.ipynb
+++ b/InSARNoiseLogarithmic.ipynb
@@ -363,7 +363,17 @@
     "from skimage.metrics import peak_sginal_noise_ratio as psnr_metric\n",
     "from skimage.metrics import structural_similarity as ssim_metric\n",
     "\n",
-    "def"
+    "def generate_metrics(clean_image, denoised_image):\n",
+    "    clean_image_np = clean_image.squeeze().cpu().numpy()\n",
+    "    denoised_output_np = denoised_output.squeeze().cpu().numpy()\n",
+    "    \n",
+    "    max_val = np.max(clean_image)\n",
+    "    min_val = np.min(clean_image)\n",
+    "    data_range = max_val - min_val\n",
+    "\n",
+    "    psnr_metric(clean_image, denoised_image, data_range=data_range)\n",
+    "    ssim_value = ssim_metric(clean_image, denoised_image, data_range=data_range)\n",
+    "    rsme_value = "
    ]
   }
  ],
