Testing model training locally

--- a/InSARNoiseGeneralized.ipynb
+++ b/InSARNoiseGeneralized.ipynb
@@ -424,7 +424,7 @@
    "id": "3f24c62a-1fa9-4cc6-9fd6-c465281d8dab",
    "metadata": {},
    "source": [
-    "The original linear notebook leaves out metrics for comparing our images to evaluate our model with. There are three primary metrics often used for denoising images this"
+    "The original linear notebook leaves out metrics for comparing our images to evaluate our model with. There are three primary metrics often used for denoising images these include PSNR, SSIM, and RSME values. They all have various benefits and are all good to include. Here is a general function that takes in a \"clean_image\" (this is just a subsidence background at some time t) and then the \"denoised image\" which is after putting a noisy version of that subsidence background and getting an output out of it."
    ]
   },
   {
