Reverted back to MSE and Cleaned up Code

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -152,7 +152,6 @@
     "        noisy_image2_tensor = torch.from_numpy(noisy_image2.copy()).float().unsqueeze(0)\n",
     "        return noisy_image1_tensor, noisy_image2_tensor, clean_image_tensor\n",
     "\n",
-    "# --- Time Evolution Functions ---\n",
     "def f_linear(t, times_array, total_time_val):\n",
     "    if total_time_val == 0: return 0\n",
     "    return t / total_time_val\n",
@@ -176,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMG_SIZE = (1500, 1500) # Large image size\n",
+    "IMG_SIZE = (1500, 1500)\n",
     "S_MAX = 5.0\n",
     "D_DEPTH = 50\n",
     "NU = 0.25\n",
@@ -188,12 +187,9 @@
     "TOTAL_DAYS = 1460\n",
     "INTERVAL_DAYS = 49\n",
     "\n",
-    "# --- Root directory for saving precomputed dataset ---\n",
     "# IMPORTANT: Change this to your Google Drive path if using Drive\n",
     "PRECOMPUTED_DATA_ROOT = r\"C:\\Users\\manav\\KyodaiNaturalResourceLab\\dataset\"\n",
-    "# ==============================================================\n",
-    "# PHASE 1: DATA GENERATION AND SAVING (Run this section ONCE)\n",
-    "# ==============================================================\n",
+    "\n",
     "def generate_and_save_data():\n",
     "    print(f\"Starting data generation. Files will be saved to: {PRECOMPUTED_DATA_ROOT}\")\n",
     "    os.makedirs(os.path.join(PRECOMPUTED_DATA_ROOT, 'noisy1'), exist_ok=True)\n",
@@ -212,7 +208,6 @@
     "\n",
     "    for config in dataset_configs:\n",
     "        print(f\"Generating data for config: {config['name']}\")\n",
-    "        # Instantiate the original dataset for generation\n",
     "        gen_dataset = Noise2NoiseDataset(\n",
     "            size=IMG_SIZE, S_max=S_MAX, D=D_DEPTH, nu=NU, cm=CM, V=V_PARAM,\n",
     "            random_noise_std=RANDOM_NOISE_STD, tropospheric_noise_beta=TROPOSPHERIC_NOISE_BETA,\n",
@@ -228,12 +223,10 @@
     "            try:\n",
     "                noisy1_tensor, noisy2_tensor, clean_tensor = gen_dataset[i]\n",
     "\n",
-    "                # Define file paths (relative to PRECOMPUTED_DATA_ROOT)\n",
     "                noisy1_fname = os.path.join('noisy1', f'sample_{global_sample_idx:06d}_noisy1.pt')\n",
     "                noisy2_fname = os.path.join('noisy2', f'sample_{global_sample_idx:06d}_noisy2.pt')\n",
     "                clean_fname = os.path.join('clean', f'sample_{global_sample_idx:06d}_clean.pt')\n",
     "\n",
-    "                # Save tensors\n",
     "                torch.save(noisy1_tensor, os.path.join(PRECOMPUTED_DATA_ROOT, noisy1_fname))\n",
     "                torch.save(noisy2_tensor, os.path.join(PRECOMPUTED_DATA_ROOT, noisy2_fname))\n",
     "                torch.save(clean_tensor, os.path.join(PRECOMPUTED_DATA_ROOT, clean_fname))\n",
