--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -10,9 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7610f358-c488-4391-89e1-f8ad76a65788",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -29,9 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class Noise2NoiseDataset(Dataset):\n",
@@ -170,10 +174,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a3819c4f-1168-4c95-ac16-8d2c1b0b9388",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting data generation. Files will be saved to: Data\n",
+      "Generating data for config: lin_asc_16\n",
+      "Saved sample 10...\n",
+      "Saved sample 20...\n",
+      "Saved sample 30...\n",
+      "Finished generating for config: lin_asc_16. Total samples so far: 30\n",
+      "Generating data for config: log_asc_16\n",
+      "Saved sample 40...\n",
+      "Saved sample 50...\n",
+      "Saved sample 60...\n",
+      "Finished generating for config: log_asc_16. Total samples so far: 60\n",
+      "Generating data for config: lin_desc_16\n",
+      "Saved sample 70...\n",
+      "Saved sample 80...\n",
+      "Saved sample 90...\n",
+      "Finished generating for config: lin_desc_16. Total samples so far: 90\n",
+      "Generating data for config: log_desc_16\n",
+      "Saved sample 100...\n",
+      "Saved sample 110...\n",
+      "Saved sample 120...\n",
+      "Finished generating for config: log_desc_16. Total samples so far: 120\n",
+      "Generating data for config: lin_asc_49\n",
+      "Saved sample 130...\n",
+      "Saved sample 140...\n",
+      "Saved sample 150...\n",
+      "Finished generating for config: lin_asc_49. Total samples so far: 150\n",
+      "Generating data for config: log_asc_49\n",
+      "Saved sample 160...\n",
+      "Saved sample 170...\n",
+      "Saved sample 180...\n",
+      "Finished generating for config: log_asc_49. Total samples so far: 180\n",
+      "Generating data for config: lin_desc_49\n",
+      "Saved sample 190...\n",
+      "Saved sample 200...\n",
+      "Saved sample 210...\n",
+      "Finished generating for config: lin_desc_49. Total samples so far: 210\n",
+      "Generating data for config: log_desc_49\n",
+      "Saved sample 220...\n",
+      "Saved sample 230...\n",
+      "Saved sample 240...\n",
+      "Finished generating for config: log_desc_49. Total samples so far: 240\n",
+      "Data generation complete. Total samples: 240. Manifest saved to Data/manifest.csv\n"
+     ]
+    }
+   ],
    "source": [
     "IMG_SIZE = (1500, 1500)\n",
     "S_MAX = 5.0\n",
@@ -188,7 +243,7 @@
     "INTERVAL_DAYS = 49\n",
     "\n",
     "# IMPORTANT: Change this to your Google Drive path if using Drive\n",
-    "PRECOMPUTED_DATA_ROOT = r\"C:\\Users\\manav\\KyodaiNaturalResourceLab\\dataset\"\n",
+    "PRECOMPUTED_DATA_ROOT = r\"Data\"\n",
     "\n",
     "def generate_and_save_data():\n",
     "    print(f\"Starting data generation. Files will be saved to: {PRECOMPUTED_DATA_ROOT}\")\n",
@@ -200,10 +255,14 @@
     "    global_sample_idx = 0\n",
     "\n",
     "    dataset_configs = [\n",
-    "        {'name': 'lin_asc', 'f_t': -1, 'orbit': 'ascending'},\n",
-    "        {'name': 'log_asc', 'f_t': f_log, 'orbit': 'ascending'},\n",
-    "        {'name': 'lin_desc', 'f_t': -1, 'orbit': 'descending'},\n",
-    "        {'name': 'log_desc', 'f_t': f_log, 'orbit': 'descending'}\n",
+    "        {'name': 'lin_asc_16', 'f_t': -1, 'orbit': 'ascending', 'interval': 16},\n",
+    "        {'name': 'log_asc_16', 'f_t': f_log, 'orbit': 'ascending', 'interval': 16},\n",
+    "        {'name': 'lin_desc_16', 'f_t': -1, 'orbit': 'descending', 'interval': 16},\n",
+    "        {'name': 'log_desc_16', 'f_t': f_log, 'orbit': 'descending', 'interval': 16},\n",
+    "        {'name': 'lin_asc_49', 'f_t': -1, 'orbit': 'ascending', 'interval': 49},\n",
+    "        {'name': 'log_asc_49', 'f_t': f_log, 'orbit': 'ascending', 'interval': 49},\n",
+    "        {'name': 'lin_desc_49', 'f_t': -1, 'orbit': 'descending', 'interval': 49},\n",
+    "        {'name': 'log_desc_49', 'f_t': f_log, 'orbit': 'descending', 'interval': 49}\n",
     "    ]\n",
     "\n",
     "    for config in dataset_configs:\n",
@@ -262,9 +321,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (GDAL / PyTorch)",
    "language": "python",
-   "name": "python3"
+   "name": "gdal-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -276,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
