Converted notebook to py script for running as batch jobs

--- a/ModelTrainingTest.ipynb
+++ b/ModelTrainingTest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "2ab1061f-420d-43c4-943a-ac3bcdbd06ce",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "7373325f-281c-46bb-a608-a93baf68850f",
    "metadata": {
     "tags": []
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "e9be1623-a6ca-4b9d-9aca-6f3c07f7d4b2",
    "metadata": {
     "tags": []
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "80950440-cdeb-4d73-97cc-fca9af749886",
    "metadata": {
     "tags": []
@@ -202,7 +202,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cuda\n",
       "\n",
       "Starting hyperparameter tuning...\n",
       "\n",
@@ -214,9 +213,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/4431254/ipykernel_1392752/2470004761.py:104: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+      "/scratch/local/4526887/ipykernel_614756/3810527486.py:94: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
       "  scaler = torch.cuda.amp.GradScaler(enabled=(DEVICE.type == 'cuda'))\n",
-      "/scratch/local/4431254/ipykernel_1392752/2470004761.py:35: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "/scratch/local/4526887/ipykernel_614756/3810527486.py:25: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "  with torch.cuda.amp.autocast(enabled=(device.type == 'cuda')):\n"
      ]
     },
@@ -228,12 +227,68 @@
       "Starting training for LR_0.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE...\n",
       "\n",
       "--- Epoch 1/5 for LR_0.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE ---\n",
-      "Tr B 0/168, Loss: 2.0308\n",
-      "Tr B 10/168, Loss: 1.4862\n",
-      "Tr B 20/168, Loss: 1.4774\n",
-      "Tr B 30/168, Loss: 1.3100\n",
-      "Tr B 40/168, Loss: 1.3108\n",
-      "Tr B 50/168, Loss: 1.4766\n"
+      "Tr B 0/168, Loss: 1.9677\n",
+      "Tr B 10/168, Loss: 1.3024\n",
+      "Tr B 20/168, Loss: 1.3560\n",
+      "Tr B 30/168, Loss: 1.3618\n",
+      "Tr B 40/168, Loss: 1.3852\n",
+      "Tr B 50/168, Loss: 1.3169\n",
+      "Tr B 60/168, Loss: 1.8480\n",
+      "Tr B 70/168, Loss: 1.2925\n",
+      "Tr B 80/168, Loss: 1.3470\n",
+      "Tr B 90/168, Loss: 1.3680\n",
+      "Tr B 100/168, Loss: 1.3069\n",
+      "Tr B 110/168, Loss: 1.4738\n",
+      "Tr B 120/168, Loss: 1.3750\n",
+      "Tr B 130/168, Loss: 1.2778\n",
+      "Tr B 140/168, Loss: 1.4826\n",
+      "Tr B 150/168, Loss: 1.3022\n",
+      "Tr B 160/168, Loss: 1.3161\n",
+      "End Epoch Train Avg Loss: 1.3809\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/local/4526887/ipykernel_614756/3810527486.py:48: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  with torch.cuda.amp.autocast(enabled=(device.type == 'cuda')):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val Avg Loss: 1.3527\n",
+      "New best validation loss for LR_0.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE: 1.3527 at epoch 1\n",
+      "\n",
+      "--- Epoch 2/5 for LR_0.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE ---\n",
+      "Tr B 0/168, Loss: 1.3586\n",
+      "Tr B 10/168, Loss: 1.3147\n",
+      "Tr B 20/168, Loss: 1.3340\n",
+      "Tr B 30/168, Loss: 1.4065\n",
+      "Tr B 40/168, Loss: 1.2763\n",
+      "Tr B 50/168, Loss: 1.3375\n",
+      "Tr B 60/168, Loss: 1.2824\n",
+      "Tr B 70/168, Loss: 1.2887\n",
+      "Tr B 80/168, Loss: 1.3396\n",
+      "Tr B 90/168, Loss: 1.3049\n",
+      "Tr B 100/168, Loss: 1.3123\n",
+      "Tr B 110/168, Loss: 1.4018\n",
+      "Tr B 120/168, Loss: 1.3245\n",
+      "Tr B 130/168, Loss: 1.3445\n",
+      "Tr B 140/168, Loss: 1.3458\n",
+      "Tr B 150/168, Loss: 1.2440\n",
+      "Tr B 160/168, Loss: 1.3299\n",
+      "End Epoch Train Avg Loss: 1.3493\n",
+      "Val Avg Loss: 1.3575\n",
+      "\n",
+      "--- Epoch 3/5 for LR_0.001_WD_1e-05_ED_3_DC_256_128_64_LOSS_MSE ---\n",
+      "Tr B 0/168, Loss: 1.3797\n",
+      "Tr B 10/168, Loss: 1.3228\n",
+      "Tr B 20/168, Loss: 1.3060\n",
+      "Tr B 30/168, Loss: 1.2744\n",
+      "Tr B 40/168, Loss: 1.3204\n"
      ]
     }
    ],
