Began adding topographic noise generation

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -67,6 +67,18 @@
     "            self.total_time = self.times[-1] if self.times[-1] > 0 else 1.0\n",
     "        if self.total_time <=0: self.total_time = 1.0\n",
     "\n",
+    "    def _load_dem(self, dem_path):\n",
+    "        print(f\"Loading DEM data from {dem_path}\", flush=True)\n",
+    "        dem_flat = np.fromfile(dem_path, dtype='>4')\n",
+    "        dem_data = dem_flat.reshape((8102, 8102))\n",
+    "        print(f\"DEM data shape: {dem_data.shape}\", flush=True)\n",
+    "        return dem_data\n",
+    "    \n",
+    "    def _load_baselines(self, baselines_path):\n",
+    "        print(f\"Loading baselines data from {baselines_path}\", flush=True)\n",
+    "        df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[2])\n",
+    "        print(f\"Baselines data shape: {df.shape}\", flush=True)\n",
+    "        return df[2].values.tolist()\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.times)\n",
