--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7610f358-c488-4391-89e1-f8ad76a65788",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -41,7 +41,7 @@
     "class Noise2NoiseDataset(Dataset):\n",
     "    def __init__(self, size, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
-    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending'):\n",
+    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', dem_path='dem.dehm_be', baselines_path='baselines.txt'):\n",
     "        self.size = size\n",
     "        self.S_max = S_max\n",
     "        self.D = D\n",
@@ -55,6 +55,16 @@
     "        self.interval_days = interval_days\n",
     "        self.f_t = f_t\n",
     "        self.orbit_type = orbit_type\n",
+    "        self.baselines = self._load_baselines(baselines_path)\n",
+    "\n",
+    "        full_dem_data = self._load_dem(dem_path)\n",
+    "\n",
+    "        max_x = self.dem_data.shape[1] - self.size[1]\n",
+    "        max_y = self.dem_data.shape[0] - self.size[0]\n",
+    "        rand_x = np.random.randint(0, max_x)\n",
+    "        rand_y = np.random.randint(0, max_y)\n",
+    "        self.rem_patch = full_dem_data[rand_y:rand_y + self.size[0], \n",
+    "                                rand_x:rand_x + self.size[1]]\n",
     "\n",
     "        self.incidence_angle_deg, self.satellite_azimuth_deg = self._get_orbit_geometry()\n",
     "        self.times = self.get_times()\n",
@@ -130,6 +140,21 @@
     "                                  (uy * los_vector_calc[1]) + \\\n",
     "                                  (uz * los_vector_calc[2])\n",
     "        return simulated_interferogram\n",
+    "    \n",
+    "    def generate_topographic_noise(self):\n",
+    "        delta_h = self.dem_patch\n",
+    "        b_perp = np.random.choice(self.baselines)\n",
+    "        WAVELENGTH = 0.24\n",
+    "        SLANT_RANGE = 850000\n",
+    "        incidence_angle_rad = np.deg2rad(self.incidence_angle_deg)\n",
+    "        numerator = -4 * np.pi * b_perp\n",
+    "        denominator = WAVELENGTH * SLANT_RANGE * np.sin(incidence_angle_rad)\n",
+    "        \n",
+    "        if abs(denominator) < 1e-9:\n",
+    "            return np.zeros(self.size)\n",
+    "\n",
+    "        topo_phase_noise = (numerator / denominator) * delta_h\n",
+    "        return topo_phase_noise\n",
     "\n",
     "    def get_times(self):\n",
     "        if self.total_days < 1 or self.interval_days <=0:\n",
@@ -159,10 +184,12 @@
     "        clean_image = self._get_clean_subsidence_image(current_time)\n",
     "        noise1_random = self.generate_random_noise()\n",
     "        noise1_tropo = self.generate_tropospheric_noise()\n",
-    "        noisy_image1 = clean_image + noise1_random + noise1_tropo\n",
+    "        noise1_topo = self.generate_topographic_noise()\n",
+    "        noisy_image1 = clean_image + noise1_random + noise1_tropo + noise1_topo\n",
     "        noise2_random = self.generate_random_noise()\n",
     "        noise2_tropo = self.generate_tropospheric_noise()\n",
-    "        noisy_image2 = clean_image + noise2_random + noise2_tropo\n",
+    "        noise2_topo = self.generate_topographic_noise()\n",
+    "        noisy_image2 = clean_image + noise2_random + noise2_tropo + noise2_topo\n",
     "        clean_image_tensor = torch.from_numpy(clean_image.copy()).float().unsqueeze(0)\n",
     "        noisy_image1_tensor = torch.from_numpy(noisy_image1.copy()).float().unsqueeze(0)\n",
     "        noisy_image2_tensor = torch.from_numpy(noisy_image2.copy()).float().unsqueeze(0)\n",
@@ -186,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a3819c4f-1168-4c95-ac16-8d2c1b0b9388",
    "metadata": {
     "tags": []
@@ -196,48 +223,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting data generation. Files will be saved to: Data\n",
-      "Generating data for config: lin_asc_16\n",
-      "Saved sample 10...\n",
-      "Saved sample 20...\n",
-      "Saved sample 30...\n",
-      "Finished generating for config: lin_asc_16. Total samples so far: 30\n",
-      "Generating data for config: log_asc_16\n",
-      "Saved sample 40...\n",
-      "Saved sample 50...\n",
-      "Saved sample 60...\n",
-      "Finished generating for config: log_asc_16. Total samples so far: 60\n",
-      "Generating data for config: lin_desc_16\n",
-      "Saved sample 70...\n",
-      "Saved sample 80...\n",
-      "Saved sample 90...\n",
-      "Finished generating for config: lin_desc_16. Total samples so far: 90\n",
-      "Generating data for config: log_desc_16\n",
-      "Saved sample 100...\n",
-      "Saved sample 110...\n",
-      "Saved sample 120...\n",
-      "Finished generating for config: log_desc_16. Total samples so far: 120\n",
+      "Starting data generation. Files will be saved to: Data2\n",
       "Generating data for config: lin_asc_49\n",
-      "Saved sample 130...\n",
-      "Saved sample 140...\n",
-      "Saved sample 150...\n",
-      "Finished generating for config: lin_asc_49. Total samples so far: 150\n",
-      "Generating data for config: log_asc_49\n",
-      "Saved sample 160...\n",
-      "Saved sample 170...\n",
-      "Saved sample 180...\n",
-      "Finished generating for config: log_asc_49. Total samples so far: 180\n",
-      "Generating data for config: lin_desc_49\n",
-      "Saved sample 190...\n",
-      "Saved sample 200...\n",
-      "Saved sample 210...\n",
-      "Finished generating for config: lin_desc_49. Total samples so far: 210\n",
-      "Generating data for config: log_desc_49\n",
-      "Saved sample 220...\n",
-      "Saved sample 230...\n",
-      "Saved sample 240...\n",
-      "Finished generating for config: log_desc_49. Total samples so far: 240\n",
-      "Data generation complete. Total samples: 240. Manifest saved to Data/manifest.csv\n"
+      "Loading baselines data from baselines.txt\n",
+      "Baselines data shape: (403, 1)\n",
+      "Loading DEM data from dem.dehm_be\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_22204\\2920410172.py:49: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[2])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "data type '>' not understood",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 79\u001b[0m\n\u001b[0;32m     76\u001b[0m     manifest_df\u001b[38;5;241m.\u001b[39mto_csv(manifest_path, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData generation complete. Total samples: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mglobal_sample_idx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Manifest saved to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmanifest_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 79\u001b[0m \u001b[43mgenerate_and_save_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 31\u001b[0m, in \u001b[0;36mgenerate_and_save_data\u001b[1;34m()\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m config \u001b[38;5;129;01min\u001b[39;00m dataset_configs:\n\u001b[0;32m     30\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating data for config: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 31\u001b[0m     gen_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mNoise2NoiseDataset\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     32\u001b[0m \u001b[43m        \u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mIMG_SIZE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mS_max\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mS_MAX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mD\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mD_DEPTH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnu\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mNU\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mCM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mV\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mV_PARAM\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     33\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrandom_noise_std\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mRANDOM_NOISE_STD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtropospheric_noise_beta\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mTROPOSPHERIC_NOISE_BETA\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     34\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtropospheric_noise_scale\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mTROPOSPHERIC_NOISE_SCALE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtotal_days\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mTOTAL_DAYS\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m        \u001b[49m\u001b[43minterval_days\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mINTERVAL_DAYS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf_t\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mf_t\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morbit_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43morbit\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     36\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(gen_dataset) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     39\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarning: No samples generated for config \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Check total_days and interval_days.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[3], line 20\u001b[0m, in \u001b[0;36mNoise2NoiseDataset.__init__\u001b[1;34m(self, size, S_max, D, nu, cm, V, random_noise_std, tropospheric_noise_beta, tropospheric_noise_scale, total_days, interval_days, f_t, orbit_type, dem_path, baselines_path)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39morbit_type \u001b[38;5;241m=\u001b[39m orbit_type\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbaselines \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_load_baselines(baselines_path)\n\u001b[1;32m---> 20\u001b[0m full_dem_data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_dem\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdem_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m max_x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdem_data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     23\u001b[0m max_y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdem_data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize[\u001b[38;5;241m0\u001b[39m]\n",
+      "Cell \u001b[1;32mIn[3], line 42\u001b[0m, in \u001b[0;36mNoise2NoiseDataset._load_dem\u001b[1;34m(self, dem_path)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_load_dem\u001b[39m(\u001b[38;5;28mself\u001b[39m, dem_path):\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading DEM data from \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdem_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, flush\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 42\u001b[0m     dem_flat \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdem_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m>4\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m     dem_data \u001b[38;5;241m=\u001b[39m dem_flat\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m8102\u001b[39m, \u001b[38;5;241m8102\u001b[39m))\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDEM data shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdem_data\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, flush\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: data type '>' not understood"
      ]
     }
    ],
@@ -255,7 +267,7 @@
     "INTERVAL_DAYS = 49\n",
     "\n",
     "# IMPORTANT: Change this to your Google Drive path if using Drive\n",
-    "PRECOMPUTED_DATA_ROOT = r\"Data\"\n",
+    "PRECOMPUTED_DATA_ROOT = r\"Data2\"\n",
     "\n",
     "def generate_and_save_data():\n",
     "    print(f\"Starting data generation. Files will be saved to: {PRECOMPUTED_DATA_ROOT}\")\n",
@@ -267,14 +279,7 @@
     "    global_sample_idx = 0\n",
     "\n",
     "    dataset_configs = [\n",
-    "        {'name': 'lin_asc_16', 'f_t': -1, 'orbit': 'ascending', 'interval': 16},\n",
-    "        {'name': 'log_asc_16', 'f_t': f_log, 'orbit': 'ascending', 'interval': 16},\n",
-    "        {'name': 'lin_desc_16', 'f_t': -1, 'orbit': 'descending', 'interval': 16},\n",
-    "        {'name': 'log_desc_16', 'f_t': f_log, 'orbit': 'descending', 'interval': 16},\n",
     "        {'name': 'lin_asc_49', 'f_t': -1, 'orbit': 'ascending', 'interval': 49},\n",
-    "        {'name': 'log_asc_49', 'f_t': f_log, 'orbit': 'ascending', 'interval': 49},\n",
-    "        {'name': 'lin_desc_49', 'f_t': -1, 'orbit': 'descending', 'interval': 49},\n",
-    "        {'name': 'log_desc_49', 'f_t': f_log, 'orbit': 'descending', 'interval': 49}\n",
     "    ]\n",
     "\n",
     "    for config in dataset_configs:\n",
@@ -329,13 +334,21 @@
     "\n",
     "generate_and_save_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8869848f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (GDAL / PyTorch)",
+   "display_name": "KyotoUniverstyResearch",
    "language": "python",
-   "name": "gdal-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -347,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
