Updated to fix DEM data loading

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -78,10 +78,9 @@
     "        if self.total_time <=0: self.total_time = 1.0\n",
     "\n",
     "    def _load_dem(self, dem_path):\n",
-    "        print(f\"Loading DEM data from {dem_path}\", flush=True)\n",
-    "        dem_flat = np.fromfile(dem_path, dtype='>4')\n",
-    "        dem_data = dem_flat.reshape((8102, 8102))\n",
-    "        print(f\"DEM data shape: {dem_data.shape}\", flush=True)\n",
+    "        data_type = np.dtype('>f4')\n",
+    "        raw_data = np.fromfile(path, dtype=data_type)\n",
+    "        dem_data = raw_data.reshape((8102, 8102))\n",
     "        return dem_data\n",
     "    \n",
     "    def _load_baselines(self, baselines_path):\n",
