Updated generation to allow for both types of satellites

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -41,7 +41,7 @@
     "class Noise2NoiseDataset(Dataset):\n",
     "    def __init__(self, size, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
-    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', dem_path='dem.dehm_be', baselines_path='baselines.txt'):\n",
+    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', dem_path='dem.dehm_be', baseline_type='Sentinel-1'):\n",
     "        self.size = size\n",
     "        self.S_max = S_max\n",
     "        self.D = D\n",
@@ -55,8 +55,9 @@
     "        self.interval_days = interval_days\n",
     "        self.f_t = f_t\n",
     "        self.orbit_type = orbit_type\n",
-    "        self.baselines = self._load_baselines(baselines_path)\n",
-    "\n",
+    "        self.baseline_type = baseline_type\n",
+    "        self.wavelength = 0.056\n",
+    "        self.baselines = self._load_baselines()\n",
     "        full_dem_data = self._load_dem(dem_path)\n",
     "\n",
     "        max_x = full_dem_data.shape[1] - self.size[1]\n",
@@ -83,11 +84,15 @@
     "        dem_data = raw_data.reshape((8102, 8102))\n",
     "        return dem_data\n",
     "    \n",
-    "    def _load_baselines(self, baselines_path):\n",
-    "        print(f\"Loading baselines data from {baselines_path}\", flush=True)\n",
-    "        df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[2])\n",
-    "        print(f\"Baselines data shape: {df.shape}\", flush=True)\n",
-    "        return df[2].values.tolist()\n",
+    "    def _load_baselines(self):\n",
+    "        if self.baseline_type == 'Sentinel-1': \n",
+    "            baselines_path = 'baselines_sentinel1.txt'\n",
+    "            self.wavelength = 0.056\n",
+    "        elif self.baseline_type == 'PALSAR-2': \n",
+    "            baselines_path = 'baselines_PALSAR-2.txt'\n",
+    "            self.wavelength = 0.24\n",
+    "        df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[-1])\n",
+    "        return df[-1].values.tolist()\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.times)\n",
@@ -143,11 +148,10 @@
     "    def generate_topographic_noise(self):\n",
     "        delta_h = self.dem_patch\n",
     "        b_perp = np.random.choice(self.baselines)\n",
-    "        WAVELENGTH = 0.24\n",
     "        SLANT_RANGE = 850000\n",
     "        incidence_angle_rad = np.deg2rad(self.incidence_angle_deg)\n",
     "        numerator = -4 * np.pi * b_perp\n",
-    "        denominator = WAVELENGTH * SLANT_RANGE * np.sin(incidence_angle_rad)\n",
+    "        denominator = self.wavelength * SLANT_RANGE * np.sin(incidence_angle_rad)\n",
     "        \n",
     "        if abs(denominator) < 1e-9:\n",
     "            return np.zeros(self.size)\n",
@@ -271,7 +275,6 @@
     "TOTAL_DAYS = 1460\n",
     "INTERVAL_DAYS = 49\n",
     "\n",
-    "# IMPORTANT: Change this to your Google Drive path if using Drive\n",
     "PRECOMPUTED_DATA_ROOT = r\"Data2\"\n",
     "\n",
     "def generate_and_save_data():\n",
@@ -284,7 +287,7 @@
     "    global_sample_idx = 0\n",
     "\n",
     "    dataset_configs = [\n",
-    "        {'name': 'lin_asc_49', 'f_t': -1, 'orbit': 'ascending', 'interval': 49},\n",
+    "        {'name': 'lin_asc_49', 'f_t': -1, 'orbit': 'ascending', 'interval': 49, 'baseline_type': 'Sentinel-1'},\n",
     "    ]\n",
     "\n",
     "    for config in dataset_configs:\n",
@@ -293,7 +296,7 @@
     "            size=IMG_SIZE, S_max=S_MAX, D=D_DEPTH, nu=NU, cm=CM, V=V_PARAM,\n",
     "            random_noise_std=RANDOM_NOISE_STD, tropospheric_noise_beta=TROPOSPHERIC_NOISE_BETA,\n",
     "            tropospheric_noise_scale=TROPOSPHERIC_NOISE_SCALE, total_days=TOTAL_DAYS,\n",
-    "            interval_days=INTERVAL_DAYS, f_t=config['f_t'], orbit_type=config['orbit']\n",
+    "            interval_days=INTERVAL_DAYS, f_t=config['f_t'], orbit_type=config['orbit'], baseline_type=config['baseline_type']\n",
     "        )\n",
     "        \n",
     "        if len(gen_dataset) == 0:\n",
