Centered mean of topographic noise to fix model performance.

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -94,7 +94,9 @@
     "            self.wavelength = 0.24\n",
     "            col_to_use = 1\n",
     "        df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n",
-    "        return df.iloc[:, 0].values.tolist()\n",
+    "        baselines_list = df.iloc[:, 0].values\n",
+    "        centered_baselines = baselines_list - np.mean(baselines_list)\n",
+    "        return centered_baselines.tolist()\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.times)\n",
@@ -186,16 +188,17 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        current_time = self.times[idx]\n",
-    "        topo_noise = self.generate_topographic_noise()\n",
     "        \n",
     "        clean_image = self._get_clean_subsidence_image(current_time)\n",
     "        noise1_random = self.generate_random_noise()\n",
     "        noise1_tropo = self.generate_tropospheric_noise()\n",
-    "        noisy_image1 = clean_image + noise1_random + noise1_tropo + topo_noise\n",
+    "        noise1_topo = self.generate_topographic_noise()\n",
+    "        noisy_image1 = clean_image + noise1_random + noise1_tropo + noise1_topo\n",
     "        \n",
     "        noise2_random = self.generate_random_noise()\n",
     "        noise2_tropo = self.generate_tropospheric_noise()\n",
-    "        noisy_image2 = clean_image + noise2_random + noise2_tropo + topo_noise\n",
+    "        noise2_topo = self.generate_topographic_noise()\n",
+    "        noisy_image2 = clean_image + noise2_random + noise2_tropo + noise2_topo\n",
     "        clean_image_tensor = torch.from_numpy(clean_image.copy()).float().unsqueeze(0)\n",
     "        noisy_image1_tensor = torch.from_numpy(noisy_image1.copy()).float().unsqueeze(0)\n",
     "        noisy_image2_tensor = torch.from_numpy(noisy_image2.copy()).float().unsqueeze(0)\n",
